# timeseries

./: .gitignore  .travis.yml  CHANGES  CHANGES.md  README.md  stack.yaml  time-series-lib.cabal  timeseries.cabal
benchmark/: Benchmarks.hs  Main.hs  README.md  benchmarks.md
doc/: bookmarks.md
examples/: PlotSeries.hs  README.md  Resample.hs  Sessions.hs  Smooth.hs  examples.md  timeseries-examples.cabal
examples/testdata/: Daily__Dec-18-2016_09_42_43AM.csv  test-100K.csv
src/Data/: TimeSeries.hs
src/Data/TimeSeries/: CSVReader.hs  Index.hs  Series.hs  Sessions.hs  Stats.hs  Time.hs
src/Data/TimeSeries/IO/: CSV.hs  CSVReader.hs  CSVWriter.hs
test-src/: Spec.hs
test-src/Data/: TimeSeriesSpec.hs
test-src/Data/TimeSeries/: CSVSpec.hs  IndexSpec.hs  SeriesSpec.hs  SessionsSpec.hs  StatsSpec.hs  TimeSpec.hs
test-src/Data/TimeSeries/IO/: CSVSpec.hs
testdata/: README.md  SN_m_tot_V2.0.txt  co2.csv  small.csv
