name:           timeseries
version:        0.6.0
synopsis:       Library for Time Series processing
License:        BSD3
License-file:   LICENSE
Copyright:      (c) 2019 Krzysztof Langner
stability:      Unstable interface, incomplete features.
Extra-Source-Files:
                README.md,
                CHANGES.md,
                LICENSE,
                examples/*.hs,
                examples/data/*.csv,
                benchmark/*.hs,
                benchmark/*.csv
description:
    Library for processing Time Series data.

homepage:       https://github.com/klangner/timeseries
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
category:       Data
build-type:     Simple
cabal-version:  >=1.10

source-repository head
  type:     git
  location: https://github.com/klangner/timeseries

library
  hs-source-dirs:   src
  default-language: Haskell2010
  default-extensions:
                    NoImplicitPrelude
  ghc-options:      -O2 -Wall -fwarn-tabs -funbox-strict-fields
  build-depends:
                    base >= 4.12 && < 5,
                    bytestring > 0.10 && < 0.11,
                    cassava >= 0.5 && < 0.6,
                    statistics < 1,
                    text < 2,
                    text-time < 1,
                    time >= 1.5 && < 2,
                    vector >= 0.12 && < 1
  exposed-modules:
                    Data.TimeSeries
                    Data.TimeSeries.Index
                    Data.TimeSeries.IO.CSV
  -- other-modules:
  --                   Data.TimeSeries.Time

test-suite unit-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  default-extensions:
                    NoImplicitPrelude
  ghc-options:      -threaded -rtsopts -fsimpl-tick-factor=500
  build-depends:
                    base >= 4 && <5,
                    Cabal <3,
                    hspec >=2 && <3,
                    QuickCheck >=2.6 && <3,
                    bytestring < 0.11,
                    cassava >= 0.5 && < 0.6,
                    statistics < 1,
                    text < 2,
                    text-time < 1,
                    time >= 1.5 && < 2,
                    vector >= 0.12 && < 1
  other-modules:
                    Data.TimeSeries
                    Data.TimeSeries.Index
                    Data.TimeSeries.IndexSpec
                    -- Data.TimeSeries.Sessions
                    -- Data.TimeSeries.Stats
                    -- Data.TimeSeries.Time
                    -- Data.TimeSeries.StatsSpec
                    -- Data.TimeSeries.SessionsSpec
                    -- Data.TimeSeries.TimeSpec
                    Data.TimeSeries.IO.CSV
                    Data.TimeSeries.IO.CSVSpec
  hs-source-dirs:
                    src,
                    test-src

-- Example
-- executable PlotSeries
--   main-is: examples/PlotSeries.hs
--   build-depends:
--     base,
--     bytestring,
--     Chart,
--     Chart-diagrams,
--     optparse-applicative,
--     process,
--     text-time,
--     time,
--     timeseries,
--     vector
--   default-language:    Haskell2010