name:                timeseries-examples
version:             0.1.0
author:              Krzysztof Langner
maintainer:          klangner@gmail.com
category:            Example
build-type:          Simple
cabal-version:       >=1.10

executable PlotSeries
  main-is: PlotSeries.hs
  build-depends:
    base,
    bytestring,
    chart-diagrams,
    timeseries,
    vector
  default-language:    Haskell2010
