name:                timeseries-examples
version:             0.1.0
author:              Krzysztof Langner
maintainer:          klangner@gmail.com
category:            Example
build-type:          Simple
cabal-version:       >=1.10

executable PlotSeries
  main-is: PlotSeries.hs
  build-depends:
    base,
    bytestring,
    Chart,
    Chart-diagrams,
    process,
    text-time,
    time,
    timeseries,
    vector
  default-language:    Haskell2010

executable Resample
  main-is: Resample.hs
  build-depends:
    base,
    bytestring,
    Chart,
    Chart-diagrams,
    process,
    text-time,
    time,
    timeseries,
    vector
  default-language:    Haskell2010

executable Smooth
  main-is: Smooth.hs
  build-depends:
    base,
    bytestring,
    Chart,
    Chart-diagrams,
    process,
    text-time,
    time,
    timeseries,
    statistics,
    vector
  default-language:    Haskell2010

executable Sessions
  main-is: Sessions.hs
  build-depends:
    base,
    bytestring,
    Chart,
    Chart-diagrams,
    process,
    text-time,
    time,
    timeseries,
    statistics,
    vector
  default-language:    Haskell2010
